DON-760: fixed layout issues on reset-password page

--- a/src/app/reset-password/reset-password.component.scss
+++ b/src/app/reset-password/reset-password.component.scss
@@ -5,3 +5,15 @@
     margin-bottom: 20px;
     color: mat.get-color-from-palette($donate-warn);
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
